# Calcurus

./: .gitattributes  .gitignore  Calcurus-166216b54b48a9f5.js  Calcurus-436935d6a81819e8.js  Calcurus-448c63346b2d0f8e.js  Calcurus-70dabc96d071bf19.js  Calcurus-a72dea58349402fb.js  Calcurus-bf114f89d763c552.js  Calcurus-c3b06e4091b14e14.js  Cargo.toml  LICENSE  LICENSE-CC  README.md  index.html  justfile  package.py  package.sh  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml  wasm_release.yml
i18n/en/: calcurus.ftl
packaging/appimage/: AppRun  Calcurus.desktop  build_appimage
resources/: AppRun  calcurus.desktop
src/: app.rs  app_iced.rs  config.rs  i18n.rs  libcalcurus.rs  main.rs  operations.rs  parser.rs
src/calcurus/: keys.rs  logic.rs  mod.rs  operations.rs  state.rs  types.rs  utils.rs  view.rs
