[package]
name = "calcurus"
description = "A basic GUI calculator based on libcosmic."
authors = ["Suyog Tandel(RedddFoxxyy)"]
license-file = "LICENSE-CC"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/RedddFoxxyy/Calcurus"

[dependencies]
# For libcalcurus:
rust_decimal = { version = "1.39.0", features = ["std", "maths"] }
rust_decimal_macros = "1.39.0"

# For libcosmic:
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations, however, not stable.
opt-level = 3     # Prioritizes speed. Use `z` if you prefer a small binary size.
panic = "abort"   # Higher performance by disabling panic handlers, no need to disable this.
strip = true      # Ensures debug symbols are removed.

[profile.dev]
codegen-units = 256
lto = false        # Disables link-time-optimizations.
opt-level = 0
incremental = true # Enables incremental compilation.

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[package.metadata.trunk]
tools = { wasm-opt = "skip" }
